# Humanoid-Robot-Application

./: .gitignore  Readme.txt  t3_src.7z  tutorial_4.cpp
Project/face_recognition/: CMakeLists..txt  face_recognition.py  package.xml
Project/face_recognition/src/: face_recognition.py
Project/main/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Project/main/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
Project/main/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
Project/main/devel/.private/control/: .rosinstall  _setup_util.py
Project/main/devel/.private/control/include/control/: MoveJoints.h  MoveJointsRequest.h  MoveJointsResponse.h
Project/main/devel/.private/control/lib/control/: control
Project/main/devel/.private/control/lib/pkgconfig/: control.pc
Project/main/devel/include/control/: MoveJoints.h  MoveJointsRequest.h  MoveJointsResponse.h
Project/main/devel/lib/control/: control
Project/main/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  control.pc
Project/main/devel/lib/python2.7/dist-packages/control/: __init__.py
Project/main/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
Project/main/devel/share/control/cmake/: control-msg-extras.cmake  control-msg-paths.cmake  controlConfig-version.cmake  controlConfig.cmake
Project/main/devel/share/gennodejs/ros/control/: _index.js
Project/main/devel/share/roseus/ros/control/: manifest.l
Project/main/logs/control/: build.make.004.log.stderr  build.make.006.log.stderr
Project/main/src/control/: CMakeLists.txt
Project/main/src/control/include/: tempCodeRunnerFile.h  ticket_checker.h
Project/main/src/control/launch/: start.launch
Project/main/src/control/launch/configs/: tickets.yaml
Project/main/src/control/src/: ticket_checker.cpp
Project/main/src/control/src/Application/: main.cpp
Project/main/src/control/srv/: MoveJoints.srv
T2/: tutorial_2.cpp
T3/: tutorial_3.cpp
T4/: short explanation.txt  tutorial_4.cpp
T5_group_D/: package.xml
T5_group_D/nao_control_tutorial_1/src/nao_control_tutorial_1/srv/: MoveJoints.srv
T5_group_D/script/: move_service.py
T6_group_D/nao_control_tutorial_2/: package.xml
T6_group_D/nao_control_tutorial_2/src/nao_control_tutorial_2/launch/: nao.launch
T6_group_D/nao_control_tutorial_2/src/nao_control_tutorial_2/src/: client.cpp
T7/nao_control_tutorial_3/: CMakeLists.txt
T7/nao_control_tutorial_3/launch/: nao.launch
T7/nao_control_tutorial_3/src/: contrast1cpp  main.cpp  美颜.cpp
project/.catkin_tools/profiles/default/: devel_collisions.txt
project/src/clever_nao/: CMakeLists.txt  package.xml
project/src/clever_nao/include/: ticket_checker.h
project/src/clever_nao/launch/: start.launch
project/src/clever_nao/scripts/: face_server.py  hear_server.py  speak_server.py
project/src/clever_nao/src/: main.cpp  qrcode_server.cpp  ticket_checker.cpp
project/src/clever_nao/srv/: FaceDetect.srv  Hear.srv  Speak.srv
project/src/face/: CMakeLists.txt
project/src/face/src/: bridge.py  face.py  face_detect.py  test.py
project/src/main/.catkin_tools/profiles/default/: devel_collisions.txt
project/src/main/src/control/: CMakeLists.txt
project/src/main/src/control/include/: ticket_checker.h
project/src/main/src/control/launch/: start.launch
project/src/main/src/control/launch/configs/: data.yaml
project/src/main/src/control/script/: move_service.py  speak_server.py  speech_server.py
project/src/main/src/control/src/: face_checker.cpp  ticket_checker.cpp
project/src/main/src/control/src/Application/: main.cpp
project/src/main/src/control/srv/: MoveJoints.srv  Speech.srv
tutorial_5_ws/.catkin_tools/profiles/default/: devel_collisions.txt
tutorial_5_ws/devel/: .catkin  local_setup.sh  setup.sh
tutorial_5_ws/devel/share/tutorial_5_ws/cmake/: tutorial_5_ws-msg-paths.cmake
tutorial_5_ws/src/nao_control_tutorial_1/: CMakeLists.txt  package.xml
tutorial_5_ws/src/nao_control_tutorial_1/launch/: nao.launch
tutorial_5_ws/src/nao_control_tutorial_1/script/: move_service.py
tutorial_5_ws/src/nao_control_tutorial_1/src/: client.cpp
tutorial_5_ws/src/nao_control_tutorial_1/srv/: MoveJoints.srv
tutorial_6/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
tutorial_6/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
tutorial_6/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
tutorial_6/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
tutorial_6/devel/.private/nao_control_tutorial_2/: .rosinstall
tutorial_6/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
tutorial_6/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
tutorial_6/logs/nao_control_tutorial_2/: build.cmake.000.log.stderr
tutorial_6/src/nao_control_tutorial_2/: CMakeLists.txt
tutorial_6/src/nao_control_tutorial_2/script/: move_service.py  move_service_new.py
tutorial_6/src/nao_control_tutorial_2/src/: client.cpp
tutorial_6/src/nao_control_tutorial_2/srv/: MoveJoints.srv
tutorial_6_ws/.catkin_tools/profiles/default/: devel_collisions.txt
tutorial_6_ws/src/nao_control_tutorial_2/: CMakeLists.txt
tutorial_6_ws/src/nao_control_tutorial_2/script/: move_service.py
tutorial_6_ws/src/nao_control_tutorial_2/src/: client.cpp
tutorial_6_ws/src/nao_control_tutorial_2/srv/: MoveJoints.srv
(+22 files in other folders)
